After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 585672 - Missing #include for x11 keysyms
Missing #include for x11 keysyms
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: gnome-session
2.26.x
Other Mac OS
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-06-13 18:43 UTC by Daniel Macks
Modified: 2009-06-29 22:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add missing include (478 bytes, patch)
2009-06-13 18:45 UTC, Daniel Macks
committed Details | Review

Description Daniel Macks 2009-06-13 18:43:57 UTC
Building gnome-session-2.26.1 on OS X 10.4 fails:

gcc -DHAVE_CONFIG_H -I. -I.. -I../egg -Wall -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Wno-sign-compare     -I/sw/lib/fontconfig2/include -I/sw/include/glib-2.0 -I/sw/lib/glib-2.0/include -I/sw/include/gtk-2.0 -I/sw/lib/gtk-2.0/include -I/sw/include/atk-1.0 -I/sw/include/cairo -I/sw/include/pango-1.0 -I/sw/include/pixman-1 -I/sw/include/freetype2 -I/sw/include -I/sw/include/libpng12 -I/sw/include/dbus-1.0 -I/sw/lib/dbus-1.0/include -I/sw/include/libglade-2.0 -I/sw/include/libxml2 -I/usr/X11R6/include -I/usr/X11/include -I/sw/include/gconf/2 -I/sw/include/orbit-2.0 -I/sw/include/dbus-1.0 -I/sw/lib/dbus-1.0/include -I/sw/include/glib-2.0 -I/sw/lib/glib-2.0/include -DORBIT2=1  -DLOCALE_DIR=\""/sw/share/locale"\" -DDATA_DIR=\""/sw/share/gnome-session"\" -DDBUS_LAUNCH=\"dbus-launch\" -DLIBEXECDIR=\"/sw/libexec\" -DGLADEDIR=\""/sw/share/gnome-session"\" -DGCONF_SANITY_CHECK=\""/sw/lib/gconf2/gconf-sanity-check-2"\" -DGCONFTOOL_CMD=\"/sw/bin/gconftool-2\"  -I/sw/include  -Os -c gs-idle-monitor.c
gs-idle-monitor.c: In function '_init_xtest':
gs-idle-monitor.c:294: error: 'XK_Alt_L' undeclared (first use in this function)
gs-idle-monitor.c:294: error: (Each undeclared identifier is reported only once
gs-idle-monitor.c:294: error: for each function it appears in.)
gs-idle-monitor.c:298: error: 'XK_Alt_R' undeclared (first use in this function)
make[3]: *** [gs-idle-monitor.o] Error 1

There's a missing #include for what defines the x11 keysyms
Comment 1 Daniel Macks 2009-06-13 18:45:21 UTC
Created attachment 136515 [details] [review]
Add missing include
Comment 2 Daniel Macks 2009-06-13 18:48:00 UTC
I think the use of those tokens is only for the XTest feature (compiling that .c succeeds if ./configure does not detect XTEST) so if you want to be pedantic, the #include could be controlled by #ifdef HAVE_XTEST
Comment 3 Vincent Untz 2009-06-29 22:06:39 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.