[build] Add missing includes

This is needed on some platforms.

http://bugzilla.gnome.org/show_bug.cgi?id=585672